Fixed bug where role can overflow to next line

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -249,6 +249,7 @@ body
 		text-align:center;
 		overflow:hidden;
 		margin-bottom:15px;
+		max-height:55px;
 	}
 
 	.user-frame .user-frame-role
